--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "history": "^4.6.3",
+    "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-first-router": "^1.9.12",
-    "redux-first-router-link": "^1.1.3"
+    "redux-first-router-link": "^1.1.3",
+    "remote-redux-devtools": "^0.5.12"
   },
   "devDependencies": {
     "react-scripts": "1.0.11"
